@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Fri Oct 24 11:31:50 CEST 2014
+#Thu Oct 30 11:25:42 CET 2014
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
